--- a/resources/sass/userlist 2.scss
+++ b/resources/sass/userlist 2.scss
@@ -7,8 +7,8 @@
     -ms-user-select: none;
     user-select: none;
 }
-
-
+​
+​
 // pagination start
 // .pagination{
 //     border-radius: 4px;
@@ -18,13 +18,13 @@
 //     color: black;
 //     background-color: #f2f3f5;
 //     }
-
+​
 // .pagination .page-link:hover {
 //         color: white;
 //         background-color:#003366!important;
 //     }
     
-
+​
 // .pagenation{
 //     width: 100%;
 //     height: 100vh;
@@ -34,7 +34,7 @@
 //     justify-content: center;
 // }
 // pagination
-
+​
 .pagination{
     display: flex;
     align-items: center;
