リモートリポジトリを変更しました。

--- a/public/css/item.css
+++ b/public/css/item.css
@@ -1,5 +1,6 @@
 /* edit.blade.php */
 .body{
+    background-color: rgb(153,204,255);
     font-family: poppins;
 }
 
@@ -33,7 +34,6 @@
     text-decoration: none;
     font-size: 16px;
 }
-
 select{
     background-color:transparent; 
     border-color:black; 
@@ -78,6 +78,7 @@ th ,td{
 
     /* everything same css */
     .card-body{
+        background-image: url('../images/carrot.jpg');
         background-size: cover;
         height: 250px;
         border-radius: 20px 20px 0px 0px;
@@ -88,9 +89,9 @@ th ,td{
         border-radius: 20px 20px 20px 20px;
     }
 
-    /* .card-text{
+    .card-text{
         background-color: rgb(153,204,255);
-    } */
+    }
 
     /* modal (delete and save) same css */
     .card-modal{
